moved game logic into small files and includes.  fixed some bugs.

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
     <title>Sudoku Web</title>
     <link rel="stylesheet" href="/css/game.css"/>
     <script src="/js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="/js/tick.js"></script>
+    <script src="/js/little_square.js"></script>
+    <script src="/js/big_square.js"></script>
+    <script src="/js/board.js"></script>
     <script src="/js/game.js"></script>
 </head>
 <body>
