Added support for some stock puzzles.  Removed the starting “1” on the board

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <script src="/js/little_square.js"></script>
     <script src="/js/big_square.js"></script>
     <script src="/js/board.js"></script>
+    <script src="/js/puzzles.js"></script>
     <script src="/js/game.js"></script>
 </head>
 <body>
@@ -19,7 +20,7 @@
             <div id="square_1" class="big_square">
                 <div class="little_row">
                     <div id="square_1_1" class="little_square">
-                        <div id="guess_1_1" class="guess">1</div>
+                        <div id="guess_1_1" class="guess"></div>
                         <div class="ticks_container">
                             <div class="tick_row">
                                 <div id="tick_1_1_1" class="tick">1</div>
