adding github link

--- a/src/index.html
+++ b/src/index.html
@@ -1689,7 +1689,7 @@
 <footer>
     <div
     <div id="footer_left">
-        <a href="">Git Hub</a>
+        <a href="https://github.com/billkratzer/sudoku-web" target="_blank">Git Hub</a>
     </div>
     <div id="footer_center">
         Copyright (C) 2020
