--- a/src/index.html
+++ b/src/index.html
@@ -1772,7 +1772,7 @@
                     <td>Toggle a guess tick in the selected square</td>
                 </tr>
                 <tr>
-                    <td>Space</td>
+                    <td>Space, Delete, or Backspace</td>
                     <td>Clear the value in the selected square</td>
                 </tr>
                 <tr>
