--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <script src="/js/game.js"></script>
 </head>
 <body>
+<div id="blink_screen"></div>
+
 <header>
     <div id="header_left">Web Sudoku</div>
     <div id="header_right">
